Hidden run, adding install/uninstall program argument to configure launch at startup (updating windows registry)

--- a/projects/vc2013/directick.vcxproj.filters
+++ b/projects/vc2013/directick.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="..\..\directick\UserInput.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\directick\common\common.hpp">
+      <Filter>Header Files\common</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
