--- a/projects/vc2013/directick.vcxproj
+++ b/projects/vc2013/directick.vcxproj
@@ -106,6 +106,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <SubSystem>Windows</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -133,6 +134,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\directick\Actions.hpp" />
+    <ClInclude Include="..\..\directick\common\common.hpp" />
     <ClInclude Include="..\..\directick\common\GeneralUtils.hpp" />
     <ClInclude Include="..\..\directick\common\OSUtils.hpp" />
     <ClInclude Include="..\..\directick\UserInput.hpp" />
